# BetterRenderDragon

./: CMakeLists.txt  README.md  xmake.lua
lib/kiero-src/: CMakeLists.txt  README.md
lib/kiero-src/examples/: CMakeLists.txt
lib/kiero-src/examples/imgui/: README.md  main.cpp
lib/kiero-src/examples/imgui/impl/: d3d10_impl.cpp  d3d11_impl.cpp  d3d12_impl.cpp  d3d9_impl.cpp  opengl_impl.cpp  renderer_impl.h  shared.h  win32_impl.cpp  win32_impl.h
lib/kiero-src/include/: kiero.hpp
lib/kiero-src/include/kiero/: opengl.hpp  vulkan.hpp
lib/kiero-src/include/kiero/detail/: magic_vtable.hpp  type_traits.hpp
lib/kiero-src/src/: kiero.cpp  kiero_d3dcommon.hpp  kiero_impl_d3d10.inl  kiero_impl_d3d11.inl  kiero_impl_d3d12.inl  kiero_impl_d3d9.inl  kiero_impl_opengl.inl  kiero_impl_vulkan.inl
lib/kiero-src/src/hook/: kiero_minhook.cpp  kiero_nobind.cpp  kiero_safetyhook.cpp
src/: MCHooks.cpp  MCPatches.cpp  Version.h  dllmain.cpp
src/api/memory/: Memory.cpp
src/api/memory/android/: Hook.cpp
src/api/memory/win/: Hook.cpp
src/gui/: DeferredShadingParametersDebugGUI.cpp  DeferredShadingParametersDebugGUI.h  GUI.cpp  GUI.h  Options.cpp  Options.h  RayTracingDebugGUI.cpp  RayTracingDebugGUI.h
src/imgui/: ImGuiHooks.cpp  ImGuiHooks.h
src/mc/: Bedrock.h  _HeaderOutputPredefine.h
src/mc/client/bgfx/: bgfx.h
src/mc/client/dragon/framerenderer/: DeferredShadingParameters.h
